<resources>
    <string name="app_name">HVACAward</string>
    <string name="submit_projects_and_get_rewarded">SUBMIT PROJECTS AND GET REWARDED</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="address_with_pincode_and_state">Address With PinCode and State</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="promo_code">Promo Code</string>
    <string name="name">Name</string>
    <string name="email_phone">Email / Phone</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="upload">UPLOAD</string>
    <string name="profile">PROFILE</string>
    <string name="home">HOME</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
