<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/back">

    <include
        layout="@layout/app_bar_layout"
        android:id="@+id/toolbar"/>

    <LinearLayout
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edt_name"
            android:hint="@string/name"
            android:textSize="20sp"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"/>

        <EditText
            android:id="@+id/edt_address"
            android:hint="@string/address_with_pincode_and_state"
            android:textSize="16sp"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:inputType="textMultiLine"/>

        <EditText
            android:id="@+id/edt_phone"
            android:hint="@string/mobile_no"
            android:textSize="20sp"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:inputType="phone"/>

        <EditText
            android:id="@+id/edt_email"
            android:hint="@string/email"
            android:textSize="20sp"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/edt_password"
            android:hint="@string/password"
            android:textSize="20sp"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/edt_cnf_password"
            android:hint="@string/confirm_password"
            android:textSize="20sp"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/edt_promo"
            android:hint="@string/promo_code"
            android:textSize="20sp"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:inputType="text"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:text="@string/register"
        android:layout_margin="8dp"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>