<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image"
        android:src="@drawable/logo"
        android:layout_centerInParent="true"
        android:layout_width="300dp"
        android:layout_height="300dp" />

    <TextView
        android:layout_below="@id/image"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_projects_and_get_rewarded"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold|italic"/>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_register"
            android:text="@string/register"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Base.Widget.AppCompat.Button.Colored"/>

        <Button
            android:id="@+id/btn_login"
            android:text="@string/login"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Base.Widget.AppCompat.Button.Colored"/>

    </LinearLayout>

</RelativeLayout>